--- a/public/client/css/orders.css
+++ b/public/client/css/orders.css
@@ -73,7 +73,8 @@
 .buy p:hover,.update-order p:hover{
     background-color: rgb(253, 135, 135);
     border-radius: 5px;
-    transition: all 0.5s;
+    transition: all 0.65s;
+    font-size: 15px;
 }
 .delivery p{
     width: 160px;
@@ -107,4 +108,52 @@
 }
 .update-order p a{
     line-height: 45px;
+}
+.btn-order{
+    display: flex;
+    justify-content: space-between;
+}
+#btn_update{
+    border: none;
+    background-color: rgb(253, 135, 135);
+    border-radius: 3px;
+    height:40px;
+    width: 120px;
+    margin: 20px;
+}
+#btn_update:hover,#delete_order:hover{
+    background-color: rgb(0, 195, 255);
+    transition: ease 0.6s;
+    font-size: 13px;
+}
+#delete_order{
+    background-color: rgb(253, 135, 135);
+    border-radius: 3px;
+    height:40px;
+    width: 120px;
+    margin: 20px;
+    float: right;
+}
+#delete_order a{
+    line-height: 40px;
+    padding-left: 10px;
+    color: black;
+}
+#input_price,#input_quantity{
+    border: none;
+    background-color: rgb(255, 251, 245);
+    text-align: center;
+    width: 100px;
+    padding: 5px 0;
+    color: rgb(255, 0, 0);
+    margin: 10px 0;
+}
+#input_quantity:hover{
+    background-color: rgb(255, 228, 255);
+}
+#select_size{
+    width: 70px;
+    background-color: rgb(255, 251, 245);
+    text-align: center;
+    border: none;
 }
